<resources>
    <string name="app_name">Asteroides</string>
    <string name="Arrancar">Jugar</string>
    <string name="Configurar">Configurar</string>
    <string name="Acercade">Acerca de</string>
    <string name="Salir">Salir</string>
    <string name="titleApp">Asteroides</string>
    <string name="action_setting">Configuración</string>
    <string name="about_text">Este programa ha sido desarrollado como ejemplo en la clase de Android</string>

</resources>
